# sispop-mq-real

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  libsispopmq.pc.in
sispopmq/: address.cpp  address.h  auth.cpp  auth.h  base32z.h  base64.h  batch.h  bt_serialize.cpp  bt_serialize.h  bt_value.h  connections.cpp  connections.h  hex.h  jobs.cpp  message.h  proxy.cpp  sispopmq-internal.h  sispopmq.cpp  sispopmq.h  string_view.h  version.h.in  worker.cpp
tests/: CMakeLists.txt  common.h  test_address.cpp  test_batch.cpp  test_bt.cpp  test_commands.cpp  test_connect.cpp  test_encoding.cpp  test_failures.cpp  test_inject.cpp  test_requests.cpp  test_string_view.cpp  test_tagged_threads.cpp
